kubernetes/apps/external/database/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app database
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app database
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.69.104
    ports:
      - port: 12321
