kubernetes/apps/external/database/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app database
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    hajimari.io/icon: "simple-icons:database"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: internal
  rules:
    - host: &host database.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
  tls:
    - hosts:
        - *host
